@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Improve dialog system. Use "You" for the player saying something.
+Don't send multiple texts when @reply is used in dialogs.
+Nicolas Weeger 2010-05-06
+
 Include -mexp as one of the command line options listed in the help text.
 Brendan Lally 2010-05-06
 
